# LiteSpecFormer

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: demo.ipynb
scripts/: fine_tuning.sh  pre-training.sh
scripts/zero_shot_prediction/: Alcorcon1.sh  IADAM.sh  Madrid.sh  Nudelsalat.sh  Oreland.sh  PiSDR1.sh
src/: fine_tuning.py  pre_training.py  zero_shot_prediction.py
src/litespecformer/: __init__.py  config.py  dataset.py  layers.py  metrics.py  model.py  output.py  pipeline.py  trainer.py  utils.py
